processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_14_35.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            10,
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            9,
            10,
            11,
            12,
            13,
            0,
            0,
            0,
        ],
    },
)
