processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_14_41.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            13,
            0,
            0,
            0,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            1,
            2,
            3,
            4,
        ],
    },
)
